@@ -23,7 +23,7 @@
     <properties>
         <netty.version>4.1.68.Final</netty.version>
         <hadoop.version>3.2.3</hadoop.version>
-        <gadtry.version>1.9.9</gadtry.version>
+        <gadtry.version>1.9.10-SNAPSHOT</gadtry.version>
         <guava.version>30.1-jre</guava.version>
         <commons-io>2.7</commons-io>
         <slf4j.version>1.7.25</slf4j.version>
@@ -383,7 +383,6 @@
                             <argLine>
                                 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-                                --add-opens=java.base/java.nio=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
